--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ctp.neo4j</groupId>
     <artifactId>neo4j-ogm-resourceresolver-vfs</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.1.1-SNAPSHOT</version>
     <properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+    	<neo4jogmversion>2.1.1</neo4jogmversion>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.jboss-vfs>3.2.11.Final</version.jboss-vfs>
     </properties>
@@ -31,7 +32,7 @@
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-ogm-api</artifactId>
-            <version>[2.0.0-SNAPSHOT,)</version>
+            <version>${neo4jogmversion}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss</groupId>
