--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ctp.neo4j</groupId>
     <artifactId>neo4j-ogm-resourceresolver-vfs</artifactId>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.1.1</version>
     <properties>
     	<neo4jogmversion>2.1.1</neo4jogmversion>
         <maven.compiler.source>1.8</maven.compiler.source>
